--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body onload="greet()">
+<body onload="greet(); addAnimation();">
 
     <!--little doors-->
     <h1 id="greeting" class="animate">Frohe Feiertage</h1>
